Added images. Bumped packages. Updated json. Added detail view for lists.

--- a/Meetum/Meetum.Android/packages.config
+++ b/Meetum/Meetum.Android/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms.Maps.Master" version="1.0.6469" targetFramework="MonoAndroid403" />
-  <package id="Xamarin.Forms.Master" version="1.0.6469" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Android.Support.v4" version="19.0.2" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="19.0.2" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="19.0.2" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Forms.Maps.Master" version="1.0.6595" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Forms.Master" version="1.0.6595" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.GooglePlayServices" version="15.0.3" targetFramework="MonoAndroid403" />
 </packages>
